# DMRC-CHATBOT

./: .env.sample  .gitignore  LICENSE  QAagent.py  README.md  chunks.json  interactive_rag_session.py  main.py  model_downloader.py  model_test_loading.py  pyproject.toml  qa_dataset.jsonl  summaries.json  summarization_progress.json  test.py
src/: QAagent.py  chunker.py  embedder.py  langchain_rag.py  summarizer.py
