[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "accelerate>=1.8.1",
    "chromadb>=1.0.15",
    "docx>=0.2.4",
    "hf-xet>=1.1.5",
    "huggingface-hub>=0.33.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "llama-cpp-python>=0.3.12",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'windows' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'windows' or sys_platform == 'win32'" },
]
